# registry

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  GOOGLE_EXTRACTION_FIX_PROMPT.md  IMPLEMENTATION_ROADMAP.md  QUICKSTART.md  README.md  REGISTRY_REQUIREMENTS_CACHED_TOKENS.md  REGISTRY_UPDATE_REQUEST.md  VALIDATION_REPORT.md  VALIDATION_WORKFLOW.md  index.html  manifest.json  pyproject.toml  registry_feature_request.md  source-of-truth.md  test_new_capabilities.py  update_reasoning_models.py  update_registry_capabilities.py
.claude/: CLAUDE.md  journal.md
.github/workflows/: deploy-pages.yml  static.yml  update-registry.yml
anthropic/: models.json
docs/: anthropic-structured-output.md
drafts/: anthropic.2025-09-14.draft.diff.json  anthropic.2025-10-05.draft.json  anthropic.validation.json  google.2025-10-05.draft.json  google.validation.json  openai.2025-10-05.draft.json  openai.validation.json
google/: models.json
models/: anthropic.json  google.json  openai.json  summary.json
openai/: models.json
pages/: index.html
pages/anthropic/: models.json
pages/google/: models.json
pages/openai/: models.json
sources/anthropic/: 2025-10-16-models.md.extracted.json  2025-10-20-pricing.md
sources/google/: 2025-09-21-google-gemini-1-5-flash-8b.png.extracted.json  2025-09-21-google-gemini-1-5-flash.png.extracted.json  2025-09-21-google-gemini-1-5-pro.png.extracted.json  2025-09-21-google-gemini-2-0-flash-lite.png.extracted.json  2025-09-21-google-gemini-2-0-flash-live.png.extracted.json  2025-09-21-google-gemini-2-0-flash.png.extracted.json  2025-09-21-google-gemini-2-5-flash-lite.png.extracted.json  2025-09-21-google-gemini-2-5-flash.png.extracted.json  2025-09-21-google-gemini-2-5-pro.png.extracted.json  2025-09-21-google-gemini-live-2-5-flash-preview.png.extracted.json  2025-09-21-google-model-variants.png.extracted.json  2025-09-21-google-summary.png.extracted.json  2026-01-02-models.md
sources/html/: 2025-09-20-google-models.html  2025-09-20-google-pricing.html
sources/openai/: 2025-09-21-openai-model-gpt-4-1.png.extracted.json  2025-09-21-openai-model-gpt-5-nano.png.extracted.json  2025-09-21-openai-model-o3-deep-research.png.extracted.json  2025-09-21-openai-model-o4-mini-deep-research.png.extracted.json  2025-09-21-openai-models-gpt-5-mini.png.extracted.json  2025-09-21-openai-models-gpt-5.png.extracted.json  2025-09-21-openai-pricing.png.extracted.json  Screenshot 2025-10-12 at 19.22.21.png.extracted.json  Screenshot 2025-10-12 at 19.22.43.png.extracted.json  Screenshot 2025-10-12 at 19.23.07.png.extracted.json  Screenshot 2025-10-12 at 19.23.38.png.extracted.json  Screenshot 2025-10-12 at 19.24.20.png.extracted.json  Screenshot 2025-10-12 at 19.24.54.png.extracted.json  Screenshot 2025-10-12 at 19.25.28.png.extracted.json  Screenshot 2025-10-12 at 19.26.06.png.extracted.json  Screenshot 2025-10-12 at 19.26.31.png.extracted.json  Screenshot 2025-10-12 at 19.26.58.png.extracted.json  Screenshot 2025-10-12 at 19.27.21.png.extracted.json  (+8 more)
tests/: test_cli_smoke.py  test_commands.py  test_confidence.py  test_merge_logic.py  test_reasoning_models.py  test_review_promote.py
(+49 files in other folders)
