[project]
name = "llmring-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "llmring",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.scripts]
llmring-registry = "registry.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
llmring = { path = "../llmring" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/registry"]

[tool.hatch.build.targets.sdist]
include = [
    "src/registry",
    "README.md",
    "pyproject.toml",
    "pages",
]
