[project]
name = "llmring-registry"
version = "0.1.0"
description = "LLMRing public model registry CLI and tools - extracts and maintains LLM model pricing and capabilities"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.13"
keywords = ["llm", "registry", "models", "pricing", "cli", "llmring"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.2.1",
]
urls = {"Homepage" = "https://llmring.ai", "Repository" = "https://github.com/llmring/registry", "Issues" = "https://github.com/llmring/registry/issues"}

[project.scripts]
llmring-registry = "registry.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.uv.sources]
# Development-only local sources can be configured here

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/registry"]

[tool.hatch.build.targets.sdist]
include = [
    "src/registry",
    "README.md",
    "pyproject.toml",
    "pages",
]

# No external dependencies requiring source configuration
